small color and alignment issues

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -52,6 +52,7 @@ div.hero {
 
 div.hero button {
     background-color: #013366;
+    color: #fff;
 }
 
 ul.modList {
